--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -48,6 +48,11 @@
       "profile": "Profile",
       "logout": "Logout",
       "language": "Language"
+    },
+    "language": {
+      "english": "English",
+      "portuguese": "Português",
+      "spanish": "Español"
     }
   },
   "auth": {
