--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -47,7 +47,8 @@
     "header": {
       "profile": "Profile",
       "logout": "Logout",
-      "language": "Language"
+      "language": "Language",
+      "settings": "Settings"
     },
     "language": {
       "english": "English",
@@ -59,6 +60,139 @@
       "welcome": "Welcome to your BOLT Dashboard",
       "quickStart": "Quick Start",
       "description": "Your dashboard is ready! Metrics and analytics will appear here once you start receiving checkout data."
+    },
+    "performance": {
+      "title": "Checkout Performance",
+      "subtitle": "Monitor your checkout funnel and conversion rates",
+      "conversionRate": "Conversion Rate",
+      "avgCheckoutTime": "Avg. Checkout Time",
+      "abandonmentRate": "Abandonment Rate",
+      "totalSessions": "Total Sessions",
+      "funnelTitle": "Checkout Funnel",
+      "funnelSubtitle": "Conversion rate by step"
+    },
+    "revenue": {
+      "title": "Revenue",
+      "subtitle": "Track your sales and revenue performance",
+      "totalRevenue": "Total Revenue",
+      "avgOrderValue": "Average Order Value",
+      "totalOrders": "Total Orders",
+      "revenuePerHour": "Revenue per Hour",
+      "trendTitle": "Revenue Trend",
+      "trendSubtitle": "Revenue over time"
+    },
+    "analytics": {
+      "title": "Analytics",
+      "subtitle": "Deep dive into checkout analytics and insights",
+      "payment": {
+        "title": "Payment Methods",
+        "subtitle": "Analyze payment method usage and performance"
+      },
+      "shipping": {
+        "title": "Shipping & Delivery",
+        "subtitle": "Track shipping method selection and delivery preferences"
+      },
+      "devices": {
+        "title": "Device Breakdown",
+        "subtitle": "Conversion rates by device type"
+      }
+    },
+    "themes": {
+      "title": "Themes",
+      "subtitle": "Customize your checkout appearance",
+      "createNew": "Create New Theme",
+      "edit": "Edit",
+      "activate": "Activate",
+      "backToList": "Back to Themes",
+      "editTheme": "Edit Theme",
+      "editorSubtitle": "Customize colors, fonts, and layout",
+      "themeName": "Theme Name",
+      "layout": "Layout",
+      "colors": "Colors",
+      "primaryColor": "Primary Color",
+      "secondaryColor": "Secondary Color",
+      "accentColor": "Accent Color",
+      "backgroundColor": "Background Color",
+      "textColor": "Text Color",
+      "fonts": "Fonts",
+      "headingFont": "Heading Font",
+      "bodyFont": "Body Font",
+      "preview": "Preview",
+      "save": "Save Theme"
+    },
+    "insights": {
+      "title": "Insights",
+      "subtitle": "Actionable recommendations based on your checkout data",
+      "noInsights": "No Insights Yet",
+      "noInsightsDescription": "Insights will appear here as we analyze your checkout data."
+    },
+    "profile": {
+      "title": "Profile",
+      "subtitle": "Manage your personal information",
+      "personalInfo": "Personal Information",
+      "professionalInfo": "Professional Information",
+      "name": "Full Name",
+      "email": "Email",
+      "phone": "Phone Number",
+      "company": "Company",
+      "jobTitle": "Job Title",
+      "emailNote": "Email cannot be changed",
+      "editProfile": "Edit Profile",
+      "saveChanges": "Save Changes",
+      "cancel": "Cancel",
+      "saveSuccess": "Profile updated successfully",
+      "saveError": "Failed to update profile",
+      "accountStats": "Account Statistics",
+      "memberSince": "Member Since",
+      "lastLogin": "Last Login",
+      "accountStatus": "Account Status",
+      "active": "Active",
+      "avatarUploadComingSoon": "Avatar upload coming soon"
+    },
+    "settings": {
+      "title": "Settings",
+      "subtitle": "Manage your account settings and preferences",
+      "general": "General",
+      "notifications": "Notifications",
+      "security": "Security",
+      "analytics": "Analytics",
+      "dangerZone": "Danger Zone",
+      "generalSettings": "General Settings",
+      "language": "Language",
+      "timezone": "Timezone",
+      "currency": "Currency",
+      "dateFormat": "Date Format",
+      "notificationSettings": "Notification Settings",
+      "emailReports": "Email Reports",
+      "emailReportsDesc": "Receive periodic reports via email",
+      "weeklyDigest": "Weekly Digest",
+      "weeklyDigestDesc": "Get a weekly summary of your checkout performance",
+      "conversionAlerts": "Conversion Alerts",
+      "conversionAlertsDesc": "Get notified when conversion rate changes significantly",
+      "paymentAlerts": "Payment Alerts",
+      "paymentAlertsDesc": "Receive alerts about payment issues or failures",
+      "systemUpdates": "System Updates",
+      "systemUpdatesDesc": "Get notified about platform updates and new features",
+      "securitySettings": "Security Settings",
+      "twoFactorAuth": "Two-Factor Authentication",
+      "twoFactorAuthDesc": "Add an extra layer of security to your account",
+      "sessionTimeout": "Session Timeout",
+      "minutes": "minutes",
+      "hour": "hour",
+      "hours": "hours",
+      "analyticsSettings": "Analytics Settings",
+      "dataRetention": "Data Retention Period",
+      "dataRetentionDesc": "How long to keep analytics data",
+      "days": "days",
+      "year": "year",
+      "exportFormat": "Export Format",
+      "deleteAccount": "Delete Account",
+      "deleteAccountDesc": "Permanently delete your account and all associated data. This action cannot be undone.",
+      "deleteAccountButton": "Delete My Account",
+      "deleteAccountComingSoon": "Account deletion coming soon",
+      "saveChanges": "Save Changes",
+      "saveSuccess": "Settings saved successfully",
+      "saveError": "Failed to save settings"
     }
   },
   "auth": {
