--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -47,13 +47,147 @@
     "header": {
       "profile": "Perfil",
       "logout": "Cerrar sesión",
-      "language": "Idioma"
+      "language": "Idioma",
+      "settings": "Configuración"
     },
     "overview": {
       "title": "Resumen",
       "welcome": "Bienvenido a tu Dashboard BOLT",
       "quickStart": "Inicio Rápido",
       "description": "¡Tu dashboard está listo! Las métricas y analytics aparecerán aquí una vez que comiences a recibir datos de checkout."
+    },
+    "performance": {
+      "title": "Rendimiento del Checkout",
+      "subtitle": "Monitorea tu embudo de checkout y tasas de conversión",
+      "conversionRate": "Tasa de Conversión",
+      "avgCheckoutTime": "Tiempo Promedio de Checkout",
+      "abandonmentRate": "Tasa de Abandono",
+      "totalSessions": "Total de Sesiones",
+      "funnelTitle": "Embudo de Checkout",
+      "funnelSubtitle": "Tasa de conversión por paso"
+    },
+    "revenue": {
+      "title": "Ingresos",
+      "subtitle": "Rastrea tus ventas y rendimiento de ingresos",
+      "totalRevenue": "Ingresos Totales",
+      "avgOrderValue": "Valor Promedio del Pedido",
+      "totalOrders": "Total de Pedidos",
+      "revenuePerHour": "Ingresos por Hora",
+      "trendTitle": "Tendencia de Ingresos",
+      "trendSubtitle": "Ingresos a lo largo del tiempo"
+    },
+    "analytics": {
+      "title": "Analíticas",
+      "subtitle": "Análisis detallado de analíticas e insights del checkout",
+      "payment": {
+        "title": "Métodos de Pago",
+        "subtitle": "Analiza el uso y rendimiento de los métodos de pago"
+      },
+      "shipping": {
+        "title": "Envío y Entrega",
+        "subtitle": "Rastrea la selección de métodos de envío y preferencias de entrega"
+      },
+      "devices": {
+        "title": "Distribución por Dispositivo",
+        "subtitle": "Tasas de conversión por tipo de dispositivo"
+      }
+    },
+    "themes": {
+      "title": "Temas",
+      "subtitle": "Personaliza la apariencia de tu checkout",
+      "createNew": "Crear Nuevo Tema",
+      "edit": "Editar",
+      "activate": "Activar",
+      "backToList": "Volver a Temas",
+      "editTheme": "Editar Tema",
+      "editorSubtitle": "Personaliza colores, fuentes y diseño",
+      "themeName": "Nombre del Tema",
+      "layout": "Diseño",
+      "colors": "Colores",
+      "primaryColor": "Color Primario",
+      "secondaryColor": "Color Secundario",
+      "accentColor": "Color de Acento",
+      "backgroundColor": "Color de Fondo",
+      "textColor": "Color del Texto",
+      "fonts": "Fuentes",
+      "headingFont": "Fuente de Títulos",
+      "bodyFont": "Fuente del Cuerpo",
+      "preview": "Vista Previa",
+      "save": "Guardar Tema"
+    },
+    "insights": {
+      "title": "Insights",
+      "subtitle": "Recomendaciones accionables basadas en los datos de tu checkout",
+      "noInsights": "Sin Insights Aún",
+      "noInsightsDescription": "Los insights aparecerán aquí a medida que analicemos los datos de tu checkout."
+    },
+    "profile": {
+      "title": "Perfil",
+      "subtitle": "Gestiona tu información personal",
+      "personalInfo": "Información Personal",
+      "professionalInfo": "Información Profesional",
+      "name": "Nombre Completo",
+      "email": "Email",
+      "phone": "Teléfono",
+      "company": "Empresa",
+      "jobTitle": "Cargo",
+      "emailNote": "El email no puede ser cambiado",
+      "editProfile": "Editar Perfil",
+      "saveChanges": "Guardar Cambios",
+      "cancel": "Cancelar",
+      "saveSuccess": "Perfil actualizado exitosamente",
+      "saveError": "Error al actualizar el perfil",
+      "accountStats": "Estadísticas de la Cuenta",
+      "memberSince": "Miembro Desde",
+      "lastLogin": "Último Acceso",
+      "accountStatus": "Estado de la Cuenta",
+      "active": "Activo",
+      "avatarUploadComingSoon": "Carga de avatar próximamente"
+    },
+    "settings": {
+      "title": "Configuración",
+      "subtitle": "Gestiona la configuración y preferencias de tu cuenta",
+      "general": "General",
+      "notifications": "Notificaciones",
+      "security": "Seguridad",
+      "analytics": "Analíticas",
+      "dangerZone": "Zona de Peligro",
+      "generalSettings": "Configuración General",
+      "language": "Idioma",
+      "timezone": "Zona Horaria",
+      "currency": "Moneda",
+      "dateFormat": "Formato de Fecha",
+      "notificationSettings": "Configuración de Notificaciones",
+      "emailReports": "Informes por Email",
+      "emailReportsDesc": "Recibir informes periódicos por email",
+      "weeklyDigest": "Resumen Semanal",
+      "weeklyDigestDesc": "Recibe un resumen semanal del rendimiento de tu checkout",
+      "conversionAlerts": "Alertas de Conversión",
+      "conversionAlertsDesc": "Recibe notificaciones cuando la tasa de conversión cambie significativamente",
+      "paymentAlerts": "Alertas de Pago",
+      "paymentAlertsDesc": "Recibe alertas sobre problemas o fallos de pago",
+      "systemUpdates": "Actualizaciones del Sistema",
+      "systemUpdatesDesc": "Recibe notificaciones sobre actualizaciones de la plataforma y nuevas funciones",
+      "securitySettings": "Configuración de Seguridad",
+      "twoFactorAuth": "Autenticación de Dos Factores",
+      "twoFactorAuthDesc": "Añade una capa extra de seguridad a tu cuenta",
+      "sessionTimeout": "Timeout de Sesión",
+      "minutes": "minutos",
+      "hour": "hora",
+      "hours": "horas",
+      "analyticsSettings": "Configuración de Analíticas",
+      "dataRetention": "Período de Retención de Datos",
+      "dataRetentionDesc": "Cuánto tiempo mantener los datos de analíticas",
+      "days": "días",
+      "year": "año",
+      "exportFormat": "Formato de Exportación",
+      "deleteAccount": "Eliminar Cuenta",
+      "deleteAccountDesc": "Eliminar permanentemente tu cuenta y todos los datos asociados. Esta acción no se puede deshacer.",
+      "deleteAccountButton": "Eliminar Mi Cuenta",
+      "deleteAccountComingSoon": "Eliminación de cuenta próximamente",
+      "saveChanges": "Guardar Cambios",
+      "saveSuccess": "Configuración guardada exitosamente",
+      "saveError": "Error al guardar la configuración"
     }
   },
   "auth": {
