--- a/src/i18n/messages/pt-BR.json
+++ b/src/i18n/messages/pt-BR.json
@@ -47,13 +47,147 @@
     "header": {
       "profile": "Perfil",
       "logout": "Sair",
-      "language": "Idioma"
+      "language": "Idioma",
+      "settings": "Configurações"
     },
     "overview": {
       "title": "Visão Geral",
       "welcome": "Bem-vindo ao seu Dashboard BOLT",
       "quickStart": "Início Rápido",
       "description": "Seu dashboard está pronto! Métricas e analytics aparecerão aqui assim que você começar a receber dados de checkout."
+    },
+    "performance": {
+      "title": "Desempenho do Checkout",
+      "subtitle": "Monitore seu funil de checkout e taxas de conversão",
+      "conversionRate": "Taxa de Conversão",
+      "avgCheckoutTime": "Tempo Médio de Checkout",
+      "abandonmentRate": "Taxa de Abandono",
+      "totalSessions": "Total de Sessões",
+      "funnelTitle": "Funil de Checkout",
+      "funnelSubtitle": "Taxa de conversão por etapa"
+    },
+    "revenue": {
+      "title": "Receita",
+      "subtitle": "Acompanhe suas vendas e desempenho de receita",
+      "totalRevenue": "Receita Total",
+      "avgOrderValue": "Ticket Médio",
+      "totalOrders": "Total de Pedidos",
+      "revenuePerHour": "Receita por Hora",
+      "trendTitle": "Tendência de Receita",
+      "trendSubtitle": "Receita ao longo do tempo"
+    },
+    "analytics": {
+      "title": "Analytics",
+      "subtitle": "Análise detalhada de analytics e insights do checkout",
+      "payment": {
+        "title": "Métodos de Pagamento",
+        "subtitle": "Analise o uso e desempenho dos métodos de pagamento"
+      },
+      "shipping": {
+        "title": "Frete e Entrega",
+        "subtitle": "Acompanhe a seleção de métodos de frete e preferências de entrega"
+      },
+      "devices": {
+        "title": "Distribuição por Dispositivo",
+        "subtitle": "Taxas de conversão por tipo de dispositivo"
+      }
+    },
+    "themes": {
+      "title": "Temas",
+      "subtitle": "Personalize a aparência do seu checkout",
+      "createNew": "Criar Novo Tema",
+      "edit": "Editar",
+      "activate": "Ativar",
+      "backToList": "Voltar para Temas",
+      "editTheme": "Editar Tema",
+      "editorSubtitle": "Personalize cores, fontes e layout",
+      "themeName": "Nome do Tema",
+      "layout": "Layout",
+      "colors": "Cores",
+      "primaryColor": "Cor Primária",
+      "secondaryColor": "Cor Secundária",
+      "accentColor": "Cor de Destaque",
+      "backgroundColor": "Cor de Fundo",
+      "textColor": "Cor do Texto",
+      "fonts": "Fontes",
+      "headingFont": "Fonte de Títulos",
+      "bodyFont": "Fonte do Corpo",
+      "preview": "Pré-visualização",
+      "save": "Salvar Tema"
+    },
+    "insights": {
+      "title": "Insights",
+      "subtitle": "Recomendações acionáveis baseadas nos dados do seu checkout",
+      "noInsights": "Sem Insights Ainda",
+      "noInsightsDescription": "Insights aparecerão aqui conforme analisamos os dados do seu checkout."
+    },
+    "profile": {
+      "title": "Perfil",
+      "subtitle": "Gerencie suas informações pessoais",
+      "personalInfo": "Informações Pessoais",
+      "professionalInfo": "Informações Profissionais",
+      "name": "Nome Completo",
+      "email": "Email",
+      "phone": "Telefone",
+      "company": "Empresa",
+      "jobTitle": "Cargo",
+      "emailNote": "O email não pode ser alterado",
+      "editProfile": "Editar Perfil",
+      "saveChanges": "Salvar Alterações",
+      "cancel": "Cancelar",
+      "saveSuccess": "Perfil atualizado com sucesso",
+      "saveError": "Falha ao atualizar perfil",
+      "accountStats": "Estatísticas da Conta",
+      "memberSince": "Membro Desde",
+      "lastLogin": "Último Acesso",
+      "accountStatus": "Status da Conta",
+      "active": "Ativo",
+      "avatarUploadComingSoon": "Upload de avatar em breve"
+    },
+    "settings": {
+      "title": "Configurações",
+      "subtitle": "Gerencie as configurações e preferências da sua conta",
+      "general": "Geral",
+      "notifications": "Notificações",
+      "security": "Segurança",
+      "analytics": "Analytics",
+      "dangerZone": "Zona de Perigo",
+      "generalSettings": "Configurações Gerais",
+      "language": "Idioma",
+      "timezone": "Fuso Horário",
+      "currency": "Moeda",
+      "dateFormat": "Formato de Data",
+      "notificationSettings": "Configurações de Notificação",
+      "emailReports": "Relatórios por Email",
+      "emailReportsDesc": "Receber relatórios periódicos por email",
+      "weeklyDigest": "Resumo Semanal",
+      "weeklyDigestDesc": "Receba um resumo semanal do desempenho do seu checkout",
+      "conversionAlerts": "Alertas de Conversão",
+      "conversionAlertsDesc": "Seja notificado quando a taxa de conversão mudar significativamente",
+      "paymentAlerts": "Alertas de Pagamento",
+      "paymentAlertsDesc": "Receba alertas sobre problemas ou falhas de pagamento",
+      "systemUpdates": "Atualizações do Sistema",
+      "systemUpdatesDesc": "Seja notificado sobre atualizações da plataforma e novos recursos",
+      "securitySettings": "Configurações de Segurança",
+      "twoFactorAuth": "Autenticação de Dois Fatores",
+      "twoFactorAuthDesc": "Adicione uma camada extra de segurança à sua conta",
+      "sessionTimeout": "Timeout de Sessão",
+      "minutes": "minutos",
+      "hour": "hora",
+      "hours": "horas",
+      "analyticsSettings": "Configurações de Analytics",
+      "dataRetention": "Período de Retenção de Dados",
+      "dataRetentionDesc": "Por quanto tempo manter os dados de analytics",
+      "days": "dias",
+      "year": "ano",
+      "exportFormat": "Formato de Exportação",
+      "deleteAccount": "Excluir Conta",
+      "deleteAccountDesc": "Excluir permanentemente sua conta e todos os dados associados. Esta ação não pode ser desfeita.",
+      "deleteAccountButton": "Excluir Minha Conta",
+      "deleteAccountComingSoon": "Exclusão de conta em breve",
+      "saveChanges": "Salvar Alterações",
+      "saveSuccess": "Configurações salvas com sucesso",
+      "saveError": "Falha ao salvar configurações"
     }
   },
   "auth": {
